<resources>
    <string name="app_name">TopWorldUniversityApp</string>
    <string name="universities_name">Universities Name</string>
    <string name="description">Description :</string>
    <string name="score">Score</string>
    <string name="about">About Me</string>
    <string name="email">a030dsx2301@bangkit.academy</string>
    <string name="name">Samuel I. H. Sibuea</string>
    <string name="university">University</string>
    <string name="country">Country</string>
    <string name="motto">Motto</string>
    <string name="detail">Detail of Description</string>
    <string name="share">Share It</string>
    <string-array name="data_name">
        <item>Massachusetts Institute of Technology (MIT)</item>
        <item>University of Cambridge</item>
        <item>Stanford University</item>
        <item>University of Oxford</item>
        <item>Harvard University</item>
        <item>California Institute of Technology (Caltech)</item>
        <item>Imperial College London</item>
        <item>UCL</item>
        <item>ETH Zurich</item>
        <item>University of Chicago</item>
        <item>National University of Singapore (NUS)</item>
        <item>Peking University</item>
        <item>University of Pennsylvania</item>
        <item>Tsinghua University</item>
        <item>The University of Edinburgh</item>
    </string-array>
</resources>