<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:university_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/university_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    university_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="2dp"
            tools:src="@tools:sample/avatars"
            university_view:layout_constraintBottom_toBottomOf="parent"
            university_view:layout_constraintStart_toStartOf="parent"
            university_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/universities_name"
            university_view:layout_constraintEnd_toEndOf="parent"
            university_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            university_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            tools:text="@string/score"
            university_view:layout_constraintBottom_toBottomOf="parent"
            university_view:layout_constraintEnd_toEndOf="parent"
            university_view:layout_constraintHorizontal_bias="0.056"
            university_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            university_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            university_view:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp"
            tools:text="@string/description"
            university_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            university_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"

            university_view:layout_constraintHorizontal_bias="0.571"
            university_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            university_view:layout_constraintTop_toBottomOf="@+id/tv_item_score" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>